--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,6 @@ indent_style = space
 indent_size = 4
 
 # 2 space indentation
-[*.{scss,sass}]
+[*.{scss,sass,json}]
 indent_style = space
 indent_size = 2
