--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "event-stream": "^3.3.4",
+    "glob": "^7.0.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-plumber": "^1.1.0",
