--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulpfile-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Gulpfile template to start your own project",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+	"gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
