--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/pensart/Gulpfile-template#readme",
   "devDependencies": {
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.7",
     "browserify": "^13.1.0",
     "event-stream": "^3.3.4",
     "glob": "^7.0.6",
@@ -26,7 +27,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
-	"gulp-sass-lint": "^1.3.2",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
