--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
