--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean": "^0.3.2",
     "gulp-html-beautify": "^1.0.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
