--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.7",
     "browserify": "^13.1.0",
+    "cli-color": "^1.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.0.6",
     "gulp": "^3.9.1",
